--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# PlantParent Specific
+plantparent.db
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,svelte
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,svelte
 
