--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "plantparent"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -9,3 +13,25 @@ dependencies = [
     "sqlmodel>=0.0.24",
     "uvicorn>=0.34.0",
 ]
+
+[dependency-groups]
+dev = [
+    "hatch>=1.14.0",
+    "pytest>=8.3.5",
+]
+
+[tool.hatch.version]
+path = "./backend/plantparent/__init__.py"
+
+[tool.hatch.build.targets.wheel]
+packages = ["backend/plantparent"]
+
+[tool.pytest.ini_options]
+addopts = "-vv --capture=tee-sys"
+testpaths = [
+    "backend/tests"
+]
+log_cli = true
+
+
+
