More testing, experimenting with the way related objects are returned

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ path = "./backend/plantparent/__init__.py"
 packages = ["backend/plantparent"]
 
 [tool.pytest.ini_options]
-addopts = "-vv --capture=tee-sys"
+addopts = "-v --capture=tee-sys"
 testpaths = [
     "backend/tests"
 ]
