Change .gitignore to include lib types and run configurations.

--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+backend/lib/
 lib64/
 parts/
 sdist/
@@ -298,3 +298,4 @@ pyrightconfig.json
 package
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,svelte
+!/frontend/src/lib/
